2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/chage.c: Add the arguments' names in the functions
	prototypes.
	* src/chage.c: The ID argument of audit_logger is an unsigned
	int. Use AUDIT_NO_ID instead of -1.
	* src/chage.c: print_date() received a time_t.
	* src/chage.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spwent.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupadd.c: The ID argument of audit_logger is an unsigned
	int. Use AUDIT_NO_ID instead of -1.
	* src/groupadd.c: Cast the parsed GID/UID to a gid_t/uid_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/pwck.c: Use a %lu format and cast group and user IDs to
	unsigned long integers.
	* src/pwck.c: Cast number of days to a long integer.
	* src/pwck.c: Use the SCALE macro instead of (24L * 3600L)
	for the values to be set in /etc/shadow.
	* src/pwck.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spent.sp_flag.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/passwd.c: Ignore return value of time() when use with a
	non NULL argument.
	* src/passwd.c: Cast number of days to a long integer.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/groupmod.c: The ID argument of audit_logger is an unsigned
	int. Use AUDIT_NO_ID instead of -1.
	* src/groupmod.c:  Use a %lu format and cast group and user IDs to
	unsigned long integers.
	* src/groupmod.c: Cast the parsed GID/UID to a gid_t/uid_t.

2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>

	* src/useradd.c: The ID argument of audit_logger is an unsigned
	int. Use AUDIT_NO_ID instead of -1.
	* src/useradd.c: Cast the parsed GID/UID to a gid_t/uid_t.
	* src/useradd.c: The size argument of fgets is an int, not a
	size_t.
	* src/useradd.c: Cast number of days to a long integer.
	* src/useradd.c: Use SHADOW_SP_FLAG_UNSET for the initial
	value of spent.sp_flag.