@@ -1,5 +1,13 @@
 2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
 
+	* src/login.c: Ignore the return value of signal().
+	* src/login.c: Use a %lu format and cast group and user IDs to
+	unsigned long integers.
+	* src/login.c: Ignore return value of setlocale(),
+	bindtextdomain(), and textdomain().
+
+2008-06-13  Nicolas François  <nicolas.francois@centraliens.net>
+
 	* src/chage.c: Add the arguments' names in the functions
 	prototypes.
 	* src/chage.c: The ID argument of audit_logger is an unsigned
